@@ -27,6 +27,7 @@ import org.elasticsearch.action.index.IndexRequest;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.update.UpdateRequest;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
@@ -35,6 +36,7 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.common.util.concurrent.EsExecutors;
+import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.IndexingPressure;
 import org.elasticsearch.index.VersionType;
@@ -45,34 +47,32 @@ import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
-import java.util.function.Predicate;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
 import static java.util.Collections.emptySet;
-import static java.util.Collections.singleton;
 import static org.mockito.Matchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCase {
+    private static final Consumer<String> noop = index -> {};
+
     public void testNonExceptional() {
         BulkRequest bulkRequest = new BulkRequest();
         bulkRequest.add(new IndexRequest(randomAlphaOfLength(5)));
         bulkRequest.add(new IndexRequest(randomAlphaOfLength(5)));
         bulkRequest.add(new DeleteRequest(randomAlphaOfLength(5)));
         bulkRequest.add(new UpdateRequest(randomAlphaOfLength(5), randomAlphaOfLength(5)));
-        // Test emulating auto_create_index=false
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, null);
-        // Test emulating auto_create_index=true
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> true);
-        // Test emulating all indices already created
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> false);
+        // Test emulating that index can be auto-created
+        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> true, noop);
+        // Test emulating that index cannot be auto-created
+        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> false, noop);
         // Test emulating auto_create_index=true with some indices already created.
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> randomBoolean());
+        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> randomBoolean(), noop);
     }
 
     public void testAllFail() {
@@ -81,7 +81,7 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
         bulkRequest.add(new IndexRequest("can't"));
         bulkRequest.add(new DeleteRequest("do").version(0).versionType(VersionType.EXTERNAL));
         bulkRequest.add(new UpdateRequest("nothin", randomAlphaOfLength(5)));
-        indicesThatCannotBeCreatedTestCase(new HashSet<>(Arrays.asList("no", "can't", "do", "nothin")), bulkRequest, index -> {
+        indicesThatCannotBeCreatedTestCase(Set.of("no", "can't", "do", "nothin"), bulkRequest, index -> true, index -> {
             throw new IndexNotFoundException("Can't make it because I say so");
         });
     }
@@ -91,40 +91,43 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
         bulkRequest.add(new IndexRequest("ok"));
         bulkRequest.add(new IndexRequest("bad"));
         // Emulate auto_create_index=-bad,+*
-        indicesThatCannotBeCreatedTestCase(singleton("bad"), bulkRequest, index -> {
+        indicesThatCannotBeCreatedTestCase(Set.of("bad"), bulkRequest, index -> true, index -> {
             if (index.equals("bad")) {
                 throw new IndexNotFoundException("Can't make it because I say so");
             }
-            return true;
-        });
-        // Emulate auto_create_index=false but the "ok" index already exists
-        indicesThatCannotBeCreatedTestCase(singleton("bad"), bulkRequest, index -> {
-            if (index.equals("bad")) {
-                throw new IndexNotFoundException("Can't make it because I say so");
-            }
-            return false;
         });
     }
 
 
     private void indicesThatCannotBeCreatedTestCase(Set<String> expected,
-            BulkRequest bulkRequest, Predicate<String> shouldAutoCreate) {
+            BulkRequest bulkRequest, Function<String, Boolean> shouldAutoCreate, Consumer<String> simulateAutoCreate) {
         ClusterService clusterService = mock(ClusterService.class);
         ClusterState state = mock(ClusterState.class);
         when(state.getMetadata()).thenReturn(Metadata.EMPTY_METADATA);
         when(state.metadata()).thenReturn(Metadata.EMPTY_METADATA);
         when(clusterService.state()).thenReturn(state);
+
         DiscoveryNodes discoveryNodes = mock(DiscoveryNodes.class);
         when(state.getNodes()).thenReturn(discoveryNodes);
         when(discoveryNodes.getMinNodeVersion()).thenReturn(VersionUtils.randomCompatibleVersion(random(), Version.CURRENT));
+
         DiscoveryNode localNode = mock(DiscoveryNode.class);
         when(clusterService.localNode()).thenReturn(localNode);
         when(localNode.isIngestNode()).thenReturn(randomBoolean());
+
         final ThreadPool threadPool = mock(ThreadPool.class);
         final ExecutorService direct = EsExecutors.newDirectExecutorService();
         when(threadPool.executor(anyString())).thenReturn(direct);
+
+        final IndexNameExpressionResolver indexNameExpressionResolver = new IndexNameExpressionResolver(new ThreadContext(Settings.EMPTY)) {
+            @Override
+            public boolean hasIndexAbstraction(String indexAbstraction, ClusterState state) {
+                return shouldAutoCreate.apply(indexAbstraction) == false;
+            }
+        };
+
         TransportBulkAction action = new TransportBulkAction(threadPool, mock(TransportService.class), clusterService,
-                null, null, mock(ActionFilters.class), null, null,
+            null, null, mock(ActionFilters.class), indexNameExpressionResolver,
             new IndexingPressure(Settings.EMPTY), new SystemIndices(Map.of())) {
             @Override
             void executeBulk(Task task, BulkRequest bulkRequest, long startTimeNanos, ActionListener<BulkResponse> listener,
@@ -133,21 +136,25 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
             }
 
             @Override
-            boolean needToCheck() {
-                return null != shouldAutoCreate; // Use "null" to mean "no indices can be created so don't bother checking"
-            }
-
-            @Override
-            boolean shouldAutoCreate(String index, ClusterState state) {
-                return shouldAutoCreate.test(index);
-            }
-
-            @Override
             void createIndex(String index, TimeValue timeout, Version minNodeVersion, ActionListener<CreateIndexResponse> listener) {
-                // If we try to create an index just immediately assume it worked
-                listener.onResponse(new CreateIndexResponse(true, true, index) {});
+                try {
+                    simulateAutoCreate.accept(index);
+                    // If we try to create an index just immediately assume it worked
+                    listener.onResponse(new CreateIndexResponse(true, true, index) {
+                    });
+                } catch (Exception e) {
+                    listener.onFailure(e);
+                }
             }
         };
-        action.doExecute(null, bulkRequest, null);
+        action.doExecute(null, bulkRequest, new ActionListener<>() {
+            @Override
+            public void onResponse(BulkResponse bulkItemResponses) {}
+
+            @Override
+            public void onFailure(Exception e) {
+                throw new AssertionError(e);
+            }
+        });
     }
 }
